# multimethod

./: .gitignore  .hgignore  .hgtags  .travis.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  README.txt  great-docs.yml  index.html  mkdocs.yml  multimethod.py  objects.inv  pyproject.toml  requirements.in  setup.cfg  setup.py  sitemap.xml  test.py  tests.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  codeql.yml  codspeed.yml  release.yml
docs/: conf.py  examples.ipynb  examples.qmd  index.rst  reference.md  reference.rst  requirements.in
examples/: index.html
multimethod/: __init__.py
multimethod.egg-info/: PKG-INFO  SOURCES.txt
reference/: index.html
search/: search_index.json
tests/: conftest.py  requirements.in  static.py  test_all.py  test_async_multimethod.py  test_dispatch.py  test_docstring.py  test_generics.py  test_methods.py  test_overload.py  test_py3.py  test_static.py  test_subscripts.py
