[metadata]
name = multimethod
version = attr: multimethod.__version__
author = Aric Coady
author_email = aric.coady@gmail.com
description = Multiple argument dispatching.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/coady/multimethod
license = Apache Software License
keywords = multiple, dispatch, multidispatch, generic, functions, methods, overload
project_urls =
    Documentation = https://coady.github.io/multimethod
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
zip_safe = False
packages = multimethod
install_requires = multimethod>=1.0
python_requires = >=3.7
tests_require = pytest-cov

[options.package_data]
multimethod = py.typed

[flake8]
ignore = F811,W503
max-line-length = 100

[coverage:run]
source = multimethod
branch = True
